--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:puppeteer": "node crawl-puppeteer.js",
+    "start:puppeteer:member": "node scrap-member.js",
     "start:crawl": "node index.js"
   },
   "keywords": [],
